--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
             </ul>
          </div>
       </nav>
-   </header>
+    </header>
 
     <div class="nonesrc_hello">
-      <h2>Hello User<br>Come back Soon!</h2>
+      <section>
+        <h1 class="homb1"><span class="homespan">Making anything, everything</span><span>Possible</span></h1>
+      </section>
     </div>
 
     <footer id="footer">
@@ -52,8 +54,5 @@
       </div>
       <div class="backdrop"></div>
     </footer>
-
-    <script src="./script.js"></script>
-
   </body>
 </html>
