--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <ul class="menu-inner">
                <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
                <li class="menu-item"><a href="https://discord.gg/yD6mREYynJ" class="menu-link">Discord</a></li>
+               <li class="menu-item"><a href="/archive" class="menu-link">My Archives</a></li>
             </ul>
          </div>
       </nav>
