--- a/index.html
+++ b/index.html
@@ -56,5 +56,7 @@
       </div>
       <div class="backdrop"></div>
     </footer>
+
+    <script src="/scripts/navbarmobile.js"></script>
   </body>
 </html>
